<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/rxInsuranceNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rx_insurance_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/rxInsuranceNameValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rxBinIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/rx_bin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/rxBinValue"
        app:layout_constraintStart_toStartOf="@+id/rxPCNIDText"
        app:layout_constraintTop_toBottomOf="@+id/rxInsuranceNameValue" />

    <TextView
        android:id="@+id/rxPCNIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/rx_pcn"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/rxPCNValue"
        app:layout_constraintStart_toStartOf="@+id/rxMemberIDText"
        app:layout_constraintTop_toBottomOf="@+id/rxBinValue" />

    <TextView
        android:id="@+id/rxMemberIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rx_member_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/rxMemberIDValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rxPCNValue" />

    <TextView
        android:id="@+id/rxGroupIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:text="@string/rx_group_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@+id/rxMemberIDText"
        app:layout_constraintTop_toBottomOf="@+id/rxMemberIDValue" />

    <TextView
        android:id="@+id/rxInsuranceNameValue"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/white"
        android:text="@string/rxInsuranceNameValue"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/rxBinIDText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rxInsuranceNameText" />

    <TextView
        android:id="@+id/rxBinValue"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/white"
        android:text="@string/rxBinValue"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/rxPCNIDText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rxBinIDText" />

    <TextView
        android:id="@+id/rxPCNValue"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/white"
        android:text="@string/rxPCNValue"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/rxMemberIDText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rxPCNIDText" />

    <TextView
        android:id="@+id/rxMemberIDValue"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/white"
        android:text="@string/rxMemberIDValue"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/rxGroupIDText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rxMemberIDText" />

    <TextView
        android:id="@+id/rxGroupIDValue"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/white"
        android:text="@string/rxGroupIDValue"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rxGroupIDText" />
</android.support.constraint.ConstraintLayout>